# trd_genesis

./: .env.example  .gitignore  .pre-commit-config.yaml  =5.0  Dockerfile  Makefile  README.md  backup.sh  compose.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: integration.yml
.moai/project/: product.md  structure.md  tech.md
.moai/research/: ADR-hybrid-llm-signal-redesign.md
docs/: CHANGELOG.md  TRADING-RESEARCH-TOOLING-RUNBOOK.md  dashboard-ops.md
grafana/dashboards/: trading-overview.json
scripts/: analyze_news.sh  backfill_missing_ohlcv.sh  daily_screen.sh  install_cron.sh  persona_watcher.sh  start_watcher.sh  stop_watcher.sh
src/trading/: __init__.py  cli.py  config.py  healthcheck.py
tests/: conftest.py  test_cli_smoke_gate.py  test_config_cost_constants.py  test_vectorbt_boundary.py
tests/alerts/: test_sell_pnl.py  test_trade_briefing_pct.py
tests/backtest/: test_attribution_report.py  test_entry_alpha_run.py  test_exit_backtest_cli.py  test_exit_sweep.py  test_factor_lowvol.py  test_feature_alpha_measurer.py  test_historical_loader.py  test_lowvol_validation.py  test_m1_integration.py  test_universe_reconstructor.py  test_walk_forward.py
tests/bot/: test_jit_commands.py  test_telegram_commands.py
tests/cli/: test_cli_fill_sync.py  test_logging_bootstrap.py
tests/contexts/: test_macro_momentum_section.py
tests/dashboard/: __init__.py  test_054_backend.py  test_correction_sql_path.py  test_db.py  test_endpoints.py  test_queries.py  test_sector_loader.py
tests/data/: test_cache_latest_close.py  test_dynamic_universe.py  test_ecos_market_funds.py  test_korea_momentum.py  test_kospi200_backfill.py  test_kospi200_offhours_guard.py  test_krx_circuit_breaker.py  test_krx_openapi.py  test_pykrx_noise_suppression.py  test_sector_taxonomy.py  test_ticker_names.py  test_universe.py
tests/db/: test_late_cycle_state.py  test_migration_033.py  test_regime_cache.py
tests/edge/: test_analytics.py  test_analytics_044.py  test_benchmark.py  test_benchmark_044.py  test_cli_edge_report.py  test_confidence.py  test_core_market_neutral.py  test_evaluate_backtest.py  test_postmortem.py  test_realized_pnl.py  test_roundtrip_from_trim.py  test_roundtrips.py  test_scorecard.py  test_scorecard_044.py  (+4 more)
(+617 files in other folders)
